--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,7 +32,7 @@ excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${reference.KingW7PrjV1.jar}
+    ${reference.KingW8PrjV1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -61,8 +61,8 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
-project.KingW7PrjV1=../../NetBeansProjects/KingW7PrjV1
-reference.KingW7PrjV1.jar=${project.KingW7PrjV1}/dist/KingW7PrjV1.jar
+project.KingW8PrjV1=../KingW8PrjV1
+reference.KingW8PrjV1.jar=${project.KingW8PrjV1}/dist/KingW8PrjV1.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
